traces/ex01/traces_ex01_ft_print_j_02.txt
ft_print_j.c: In function ‘main’:
ft_print_j.c:8:9: error: implicit declaration of function ‘ft_print_j’; did you mean ‘fprintf’? [-Werror=implicit-function-declaration]
    8 |         ft_print_j();
      |         ^~~~~~~~~~
      |         fprintf
cc1: all warnings being treated as errors

